formatted results data and added plugin to add functionality to the table. fixed several layout bugs. beginning work on rendering the bound form after submit to show user the query submitted

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -174,21 +174,24 @@
 
 /*  QUERYFORM  */
   .form-container{border:solid 1px #f8f8f8;}
-  .form-control{border-radius:0px;}
+  /*.form-control{border-radius:0px;}*/
 
   .control-label{margin-top:7px;text-align:right;}
   #selectWrapper, #joinWrapper, #filterWrapper{margin-bottom:30px;}
   #queryForm [class*=' col-'] [class*=' col-'] {padding-right:0px;}
-  [class*='col-'] .row{margin:0px;}
+  [class*='col-'] .row{margin-left:0px;margin-right:0px;}
+
   .btn-circle {
-    width: 30px;
-    height: 30px;
+    width: 32px;
+    height: 32px;
     text-align: center;
-    padding: 6px 0;
-    font-size: 12px;
-    line-height: 1.428571429;
-    border-radius: 15px !important;
-    margin-top:2px;
+    padding:3px 6px;
+    font-size: 18px;
+    line-height: 0;
+    border-radius: 50% !important;
+    vertical-align: middle;
+    margin-left:15px;
+    border-color:#cccccc;
   }
   .select-input select.chained-parent-field{color:#C63926;}
 
@@ -202,24 +205,31 @@
     animation-iteration-count: 1 ;
   }
 
+  /*IMPORTANT - overflow:auto prevents form-group collapsing (height=0)
+  because content is all floats*/
   .form-group{
       margin-bottom:15px;
       position:relative;
       min-height:1px;
       overflow:auto;
-      /*overflow:auto prevents form-group collapsing (height=0) because content
-      is all floats*/
-      width:100%
+      width:100%;
   }
-  .form-group .row {margin:0px;}
-  /*necessary tweaks to multiselect*/
+  /*outer container for field rows*/
+  .row.form-group {width:100% !important;margin-bottom:15px !important}
+
+  /*necessary tweaks to layout*/
+  /* allow for multiselect dropdown list to be seen*/
   #selectWrapper .form-group,
   #joinWrapper .form-group,
-  #filterWrapper .form-group, #typeWrapper .form-group{
+  #filterWrapper .form-group,
+  #typeWrapper .form-group{
     overflow:visible;
+    display:inline-block;
+    width:auto;
+    max-width:90%;
+
   }
-  /* allow for multiselect dropdown list to be seen*/
-  /*.multiselect-selected-text{width:100%;max-width:180px} /*control width*/
+
   button.multiselect{white-space:normal !important; text-align:left;border-radius:0px;} /*wrap text when goes above max width*/
 
 
